[package]
name = "hog"
version = "0.1.0"
authors = ["fatmatto <cikkense@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
logwatcher = "0.1.1"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.0", features  = ["blocking"] }
simple-server = "0.4.0"
serde_json = "1.0"